--- a/DutchTreat/bower.json
+++ b/DutchTreat/bower.json
@@ -2,7 +2,11 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
+    "bootstrap": "v4.1.0",
     "jQuery": "3.3.1",
+    "tether": "v1.4.4"
+  },
+  "resolutions": {
     "bootstrap": "v4.1.0"
   }
 }
