--- a/DutchTreat/DutchTreat.csproj
+++ b/DutchTreat/DutchTreat.csproj
@@ -15,7 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Entities\" />
     <Folder Include="wwwroot\lib\" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0"></DotNetCliToolReference>
   </ItemGroup>
 
 </Project>
