--- a/DutchTreat/package.json
+++ b/DutchTreat/package.json
@@ -30,6 +30,9 @@
     "@angular/cli": "1.4.4",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "gulp": "~3.9.1",
+    "gulp-uglify": "~3.0.0",
+    "gulp-concat": "~2.6.1"
   }
 }
