--- a/DutchTreat/config.json
+++ b/DutchTreat/config.json
@@ -2,6 +2,7 @@
   "color": {
     "Favorite": "blue"
   },
+  "DisableSSL": false,
   "ConnectionStrings": {
     "DutchConnectionString": "server=(localdb)\\ProjectsV13;Database=DutchTreatDb;Integrated Security=true;MultipleActiveResultSets=true"
   },
